--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,143 @@
-<p>about works!</p>
+<app-nav></app-nav>
+
+<h1>about me</h1>
+
+
+    <!-- Page Container -->
+    <div class="w3-content w3-margin-top" style="max-width:1400px;">
+    
+      <!-- The Grid -->
+      <div class="w3-row-padding">
+      
+        <!-- Left Column -->
+        <div class="w3-third">
+        
+          <div class="w3-white w3-text-grey w3-card-4">
+            
+        
+            <div class="w3-container">
+
+              <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-blue "></i>Skills</b></p>
+              
+              <p>Creative thinking</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-blue " style="width:80%">
+                  <div class="w3-center w3-text-white">80%</div>
+                </div>
+              </div>
+              <br>
+              <p>Team building</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-blue " style="width:75%">75%</div>
+              </div>
+              <br>
+              <p>Problem Solving</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-blue " style="width:85%">85%</div>
+              </div>
+              <br>
+              <p>Figma</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-blue " style="width:60%">60%</div>
+              </div>
+              <br>
+              <p>Database</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-blue " style="width:75%">75%</div>
+              </div>
+              <br>
+    
+              <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-blue "></i>Languages</b></p>
+              <p>English</p>
+              <div class="w3-light-grey w3-round-xlarge">
+                <div class="w3-round-xlarge w3-blue  w3-center " style="height:24px;width:75%">75%</div>
+              </div>
+              <p>Setswana</p>
+              <div class="w3-light-grey w3-round-xlarge">
+                <div class="w3-round-xlarge w3-blue  w3-center " style="height:24px;width:85%">85%</div>
+              </div>
+              <p>isizulu</p>
+              <div class="w3-light-grey w3-round-xlarge">
+                <div class="w3-round-xlarge w3-center  w3-blue " style="height:24px;width:50%">50%</div>
+              </div>
+              <br>
+            </div>
+          </div><br>
+    
+        <!-- End Left Column -->
+        </div>
+    
+        <!-- Right Column -->
+        <div class="w3-twothird">
+        
+          <div class="w3-container w3-card w3-white w3-margin-bottom">
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-blue "></i>Work Experience</h2>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Full stack developer/ The digital acardemy</b></h5>
+              <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2021- <span class="w3-tag w3-blue  w3-round">Current</span></h6>
+              <p>I was responsible for designing, build and deploy software solutions based on company requirements. <br>
+                
+              </p>
+              <hr>
+            </div>
+            <br>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Stockroom Merchandiser/ JAM Clothing</b></h5>
+              <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2016 - Jan 2018</h6>
+              <p>-Capturing storck in the system |
+               
+                -Reciving deliveries | -Checking consignments</p><br>
+            </div>
+    
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Store Assistant/ JAM Clothing</b></h5>
+              <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2014 - Apr 2016</h6>
+              <p>-Stock packing |
+                -Merchandising |
+                -Customer  |
+                -Cashier<i class="fas fa-servicestack    "></i> </p><br>
+            </div>
+          </div>
+    
+          <div class="w3-container w3-card w3-white">
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-blue "></i>Education</h2>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Tshwane University of Technology</b></h5>
+              <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2018 - <span class="w3-tag w3-blue w3-round">Current</span></h6>
+              <p>National Diploma in Informtion Technology (Software Development)</p>
+              <hr>
+            </div>
+            
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Soshanguve South Secondary School</b></h5>
+              <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2009 - Dec 2013</h6>
+              <p>Matric</p>
+              <hr>
+            </div>
+            <br>
+            
+         
+          </div>
+         
+    
+        </div>
+        
+        
+    
+      </div>
+      
+      
+    
+    </div>
+    
+    
+    <footer class="w3-container w3-blue  w3-center w3-margin-top">
+    
+    
+      
+     
+    </footer>
+    
+  
+    
+    
