--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,28 +1,33 @@
 img{
-    border:dotted;
+    
     border-radius: 500px;
-    height: 20%;
+    height: 50%;
     width: auto;
-}
-
-.container{
-    margin-top: 5rem;
-    color: white;
-    font-family: Lora;
    
 }
 
-.col-sm-8{
+.container{
+    /* margin-top: 5rem; */
+    color: white;
+    font-family: Lora;
+    background-color:black;
+    padding-top: 5rem;;
+}
+
+.col-sm-8 {
     align-items: center;
     text-align: center;
+    background-color:black
+    
 }
 
 .col-sm-4{
     align-items: center;
     text-align: center;
+    background-color:black
 }
  body{
-     background-color:#404547
+     background-color:black
      
  }
 
@@ -30,4 +35,6 @@ img{
  .con1{
      margin: 0;
      margin-top: 0;
+     background-color:black
  }
+ 
