--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,32 +1,27 @@
-<body >
+
     <app-nav></app-nav>
-<div class="con1 bg-dark">
-    <div class="container bg-dark">
-        <div class="row">
-          <div class="col-sm-8">
+<div class="con1 ">
+    <div class="container">
+        <div class="row ">
+          <div class="col-sm-8 ">
     
             <h1>Hello, I'm Joseph Moeletsi Digoro</h1>
-            <p>I am a full stack develop, using Angular 2+</p>
+            <p>I am a full stack develop, using Angular 2+ and NodeJS</p>
+
+            <div class="social d-flex justify-content-center">
+              <h2 class="w3-text-blue "> <a href="https://github.com/DigoroJ"><i class="fa fa-github hr fa-xlarge fa-fw w3-margin-right"></i></a>  </h2>
+
+            <h2 class="w3-text-blue "> <a href="https://www.linkedin.com/in/joseph-digoro-b15913a3/"><i class="fa fa-linkedin hr fa-xlarge fa-fw w3-margin-right"></i></a>  </h2>
+            </div>
+            
           </div>
           <div class="col-sm-4">
-            <img src="../../assets/JD.jpeg">
+            <img src="../../assets/JD.jpg">
           </div>
         </div>
-    
-    </div><div class="container">
-        <div class="row">
-          <div class="col-sm-8">
-    
-            <h1>Hello, I'm Joseph Moeletsi Digoro</h1>
-            <p>I am a full stack develop, using Angular 2+</p>
-          </div>
-          <div class="col-sm-4">
-            <img src="../../assets/JD.jpeg">
-          </div>
-        </div>
-    
     </div> 
 </div> 
-</body>
 
-<br>
+<app-footer></app-footer>
+
+
