--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark
+<nav class="navbar navbar-expand-lg navbar-dark 
 ">
     <a class="navbar-brand" href="#"><h1>JD</h1></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,16 +7,16 @@
     <div class="collapse navbar-collapse justify-end">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="about">About <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Projects</a>
+          <a class="nav-link" href="projects">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="contacts">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">Resume</a>
+           <button type="button"  class="btn btn-outline-light a-download">Resume</button>
         </li>
       </ul>
     </div>
