--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
           <div class="col-sm-8 ">
     
             <h1>Hello, I'm Joseph Moeletsi Digoro</h1>
-            <p>I am a full stack develop, using Angular 2+ and NodeJS</p>
+            <p>I am a full stack developer, using Angular 2+ and NodeJS</p>
 
             <div class="social d-flex justify-content-center">
               <h2 class="w3-text-blue "> <a href="https://github.com/DigoroJ"><i class="fa fa-github hr fa-xlarge fa-fw w3-margin-right"></i></a>  </h2>
