--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -46,6 +46,16 @@
                 <div class="w3-container w3-center w3-round-xlarge w3-blue " style="width:75%">75%</div>
               </div>
               <br>
+              <p>UML</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-blue " style="width:70%">70%</div>
+              </div>
+              <br>
+              <p>Angular 2+</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-blue " style="width:50%">50%</div>
+              </div>
+              <br>
     
               <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-blue "></i>Languages</b></p>
               <p>English</p>
