--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -16,7 +16,9 @@
           <a class="nav-link" href="contacts">Contact</a>
         </li>
         <li class="nav-item">
-           <button type="button"  class="btn btn-outline-light a-download">Resume</button>
+           <button type="button"  class="btn btn-outline-light a-download">
+             <a href="../../assets/Joseph Digoro CV (1).pdf" download>Resume</a>
+           </button>
         </li>
       </ul>
     </div>
