--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,2 +1,64 @@
 <app-nav></app-nav>
-<p>contacts works!</p>
+
+<body>
+    
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <img src="../../assets/kisspng-computer-programming-software-developer-openvpn-eu-5d42a776e01df1.037503031564649334918.png" alt="">
+          </div>
+    
+    
+          <div class="col-sm-8">
+
+            <div class="upRight">
+
+            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue "></i>Full-Stack Developer</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue "></i>Soshanguve, Gauteng, South Africa</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue "></i>digorojoseph@gmail.com</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue "></i>060 960 6081 | 074 369 0469</p>
+          <hr>
+
+            </div>
+
+            <h1>Send messege</h1>
+            <form action="https://formsubmit.co/digorojoseph@gmail.com" method="POST">
+                <div class="mb-3">
+                    <label for="Name" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  </div>
+                  <div class="mb-3">
+                    <label for="Number" class="form-label">Cell number</label>
+                    <input type="text" class="form-control" id="Number">
+                  </div>
+                <div class="mb-3">
+                  <label for="" class="form-label">Email address</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="mb-3">
+                  <label for="messege" class="form-label">Message</label>
+                  <input type="textarea" class="form-control" id="exampleInputPassword1">
+                </div>
+                
+                <button type="submit" class="btn btn-primary">Send Messege</button>
+              </form>
+              <br><br>
+    
+          </div>
+        </div>
+      </div>
+    
+      <app-footer></app-footer>
+</body>
+
+
+
+
+<!-- <form action="https://formsubmit.co/digorojoseph@gmail.com" method="POST">
+    <label for="Name">Name</label>
+    <input type="text" name="name" required> <br>
+    <label for="">Email</label>
+    <input type="email" name="email" required> <br>
+    <button type="submit">Send</button>
+</form> -->
