--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="row">
-    <p>2022 | Joseph Moeletsi Digoro | All Rights reserved &copy;</p> 
+    <p>2022 | Joseph Moeletsi Digoro | All Rights Reserved &copy;</p> 
 </div>
