--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,10 +1,12 @@
 <app-nav></app-nav>
 
+<body>
+    
 <h1>about me</h1>
 
 
     <!-- Page Container -->
-    <div class="w3-content w3-margin-top" style="max-width:1400px;">
+    <div class="w3-content-black w3-margin-top" style="max-width:1400px;">
     
       <!-- The Grid -->
       <div class="w3-row-padding">
@@ -12,7 +14,7 @@
         <!-- Left Column -->
         <div class="w3-third">
         
-          <div class="w3-white w3-text-grey w3-card-4">
+          <div class="w3-black w3-text-grey w3-card-4">
             
         
             <div class="w3-container">
@@ -78,14 +80,14 @@
         </div>
     
         <!-- Right Column -->
-        <div class="w3-twothird">
+        <div class="w3-twothird" id="right">
         
-          <div class="w3-container w3-card w3-white w3-margin-bottom">
+          <div class="w3-container w3-card w3-black w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-blue "></i>Work Experience</h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Full stack developer/ The digital acardemy</b></h5>
+              <h5 class="w3-opacity"><b>Full stack developer/ The Digital Academy</b></h5>
               <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2021- <span class="w3-tag w3-blue  w3-round">Current</span></h6>
-              <p>I was responsible for designing, build and deploy software solutions based on company requirements. <br>
+              <p>I am responsible for designing, building and deploying software solutions based on company requirements. <br>
                 
               </p>
               <hr>
@@ -94,9 +96,9 @@
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Stockroom Merchandiser/ JAM Clothing</b></h5>
               <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2016 - Jan 2018</h6>
-              <p>-Capturing storck in the system |
+              <p>-Capturing stock in the system |
                
-                -Reciving deliveries | -Checking consignments</p><br>
+                -Receiving deliveries | -Checking consignments</p><br>
             </div>
     
             <div class="w3-container">
@@ -107,9 +109,10 @@
                 -Customer  |
                 -Cashier<i class="fas fa-servicestack    "></i> </p><br>
             </div>
+            <hr>
           </div>
     
-          <div class="w3-container w3-card w3-white">
+          <div class="w3-container w3-card w3-black">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-blue "></i>Education</h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Tshwane University of Technology</b></h5>
@@ -141,13 +144,9 @@
     </div>
     
     
-    <footer class="w3-container w3-blue  w3-center w3-margin-top">
-    
-    
-      
-     
-    </footer>
-    
   
     
+</body>
+  
+<app-footer></app-footer>
     
