--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,2 +1,75 @@
 <app-nav></app-nav>
-<p>projects works!</p>
+
+<body>
+    
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-7">
+
+            <h1>Projects</h1>
+
+            
+
+            <a href=""> <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img src="../../assets/smart.jpeg" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                       <h5 class="card-title">Smart Serve</h5> 
+                      <p class="card-text">If you work 9 to 5 everyday and you end up without having time to do other errands, Smart Serve is an app for you.
+                        Book a runner online to perform an errand on you behalf at an affordable price.
+
+                      </p>
+                   
+                    </div>
+                  </div>
+                </div>
+              </div> </a>
+
+            <a href=""> <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                <img src="../../assets/Vet.jpg" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                     <a href=""> <h5 class="card-title">Doctor Appointment</h5> </a>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  
+                    </div>
+                  </div>
+                </div>
+              </div> </a>
+
+              <a href="https://simple-store-back-end.herokuapp.com/home" target="_blank">  <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                   <img src="../../assets/cake.gif" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">The Backery Store</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                     
+                    </div>
+                  </div>
+                </div>
+                
+              </div>   </a>
+    
+          </div>
+
+
+          <div class="col-sm-5">
+            <img src="../../assets/construction1.png" alt="">
+          </div>
+        </div>
+      </div>
+    
+      <app-footer></app-footer>
+</body>
+
+
+
