--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -10,4 +10,14 @@ h1{
     font-size: 50px;
     font-family: Georgia;
     padding-left: 2rem;
+    color: white;
+}
+
+body{
+    background-color: black;
+    margin-top: 0%;
+}
+
+#right{
+    border-left: solid grey;
 }
