--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -11,6 +11,7 @@ h1{
     font-family: Georgia;
     padding-left: 2rem;
     color: white;
+    text-align: center;
 }
 
 body{
@@ -19,5 +20,23 @@ body{
 }
 
 #right{
+    border-left: solid grey;
+}
+
+.container{
+    color:white;
+}
+
+.col-sm-9{
+    text-align: center;
+}
+img{
+    height: 100px;
+}
+
+.col-sm{
+    text-align: center;
+}
+.col-sm-8{
     border-left: solid grey;
 }
