--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,148 +2,143 @@
 
 <body>
     
-<h1>about me</h1>
+    <div class="container">
+      <h1>About me</h1>
+      <div class="row">
+        <div class="col-sm-3">
+          <img src="" alt="my pic">
+        </div>
+        <div class="col-sm-9">
+          <p>
+            Hi, I am Joseph Moeletsi Digoro from Soshanguve, Gauteng, South Africa. I am a Full-Stack Developer and Photographer. <br>
+            I started working as a Full Stack Developer in December 2021 at The Digital Academy after studying Software Development at Tshwane University of Technology.
+            I work well in a group and also individually. I have good interpersonal, problem solving skill, good communication skill, good analystical skill.
+
+          </p>
+
+        </div>
+      </div> <hr>
+
+      <h1>Skills</h1>
+
+      <div class="row">
+        <div class="col-sm">
+          <img src="../../assets/html.png" alt="">
+          <h5>HTML</h5>
+
+        </div>
+        <div class="col-sm">
+          <img src="../../assets/javascript.png" alt="">
+          <h5>JavaScript</h5>
+        </div>
+        <div class="col-sm">
+          <img src="../../assets/angular.png" alt="">
+          <h5>Angular2+</h5>
+        </div>
+        <div class="col-sm">
+          <img src="../../assets/c++.png" alt="">
+          <h5>C++</h5>
+        </div>
+        <div class="col-sm">
+          <img src="../../assets/css.png" alt="">
+          <h5>CSS</h5>
+        </div>
+        <div class="col-sm">
+          <img src="../../assets/postgres.png" alt="">
+          <h5>PostgreSQL</h5>
+        </div>
+      </div>
+      <br> <br>
+
+      <div class="row">
+        <div class="col-sm">
+          <img src="../../assets/node.png" alt="">
+          <h5>NodeJS</h5>
+        </div>
+        <div class="col-sm">
+          <img src="../../assets/git.png" alt="">
+          <h5>Git</h5>
+
+        </div>
+        <div class="col-sm">
+          <img src="../../assets/cisco.png" alt="">
+          <h5>Network +</h5>
+        </div>
+       
+      </div>
+
+      <hr>
 
 
-    <!-- Page Container -->
-    <div class="w3-content-black w3-margin-top" style="max-width:1400px;">
-    
-      <!-- The Grid -->
-      <div class="w3-row-padding">
+
+      <h1>Education & Certifications</h1>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <h4>Tshwane University of Technology</h4>
+          </div>
+
+          <div class="col-sm-8">
+            <h5>National Diploma in Software Development</h5>
+            <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2018 - <span class="w3-tag w3-blue w3-round">Current</span></h6>
+          </div>
+        </div>
+
+
+      <div class="row">  
+        <div class="col-sm-4">
+          <h4>Cisco</h4>
+        </div>
+
+        <div class="col-sm-8">
+          <h5>Introduction to Networking</h5> 
+          <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2021 </h6>
+        </div>
+      </div>
+      <hr>
+
+      <h1>Work Experience</h1>
       
-        <!-- Left Column -->
-        <div class="w3-third">
-        
-          <div class="w3-black w3-text-grey w3-card-4">
-            
-        
-            <div class="w3-container">
 
-              <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-blue "></i>Skills</b></p>
-              
-              <p>Creative thinking</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-blue " style="width:80%">
-                  <div class="w3-center w3-text-white">80%</div>
-                </div>
-              </div>
-              <br>
-              <p>Team building</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-blue " style="width:75%">75%</div>
-              </div>
-              <br>
-              <p>Problem Solving</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-blue " style="width:85%">85%</div>
-              </div>
-              <br>
-              <p>Figma</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-blue " style="width:60%">60%</div>
-              </div>
-              <br>
-              <p>Database</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-blue " style="width:75%">75%</div>
-              </div>
-              <br>
-              <p>UML</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-blue " style="width:70%">70%</div>
-              </div>
-              <br>
-              <p>Angular 2+</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-blue " style="width:50%">50%</div>
-              </div>
-              <br>
-    
-              <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-blue "></i>Languages</b></p>
-              <p>English</p>
-              <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-blue  w3-center " style="height:24px;width:75%">75%</div>
-              </div>
-              <p>Setswana</p>
-              <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-blue  w3-center " style="height:24px;width:85%">85%</div>
-              </div>
-              <p>isizulu</p>
-              <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-center  w3-blue " style="height:24px;width:50%">50%</div>
-              </div>
-              <br>
-            </div>
-          </div><br>
-    
-        <!-- End Left Column -->
-        </div>
-    
-        <!-- Right Column -->
-        <div class="w3-twothird" id="right">
-        
-          <div class="w3-container w3-card w3-black w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-blue "></i>Work Experience</h2>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>Full stack developer/ The Digital Academy</b></h5>
-              <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2021- <span class="w3-tag w3-blue  w3-round">Current</span></h6>
-              <p>I am responsible for designing, building and deploying software solutions based on company requirements. <br>
-                
-              </p>
-              <hr>
-            </div>
-            <br>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>Stockroom Merchandiser/ JAM Clothing</b></h5>
-              <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2016 - Jan 2018</h6>
-              <p>-Capturing stock in the system |
-               
-                -Receiving deliveries | -Checking consignments</p><br>
-            </div>
-    
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>Store Assistant/ JAM Clothing</b></h5>
-              <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2014 - Apr 2016</h6>
-              <p>-Stock packing |
-                -Merchandising |
-                -Customer  |
-                -Cashier<i class="fas fa-servicestack    "></i> </p><br>
-            </div>
-            <hr>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <h4>The Digital Academy</h4>
           </div>
-    
-          <div class="w3-container w3-card w3-black">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-blue "></i>Education</h2>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>Tshwane University of Technology</b></h5>
-              <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2018 - <span class="w3-tag w3-blue w3-round">Current</span></h6>
-              <p>National Diploma in Informtion Technology (Software Development)</p>
-              <hr>
-            </div>
-            
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>Soshanguve South Secondary School</b></h5>
-              <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2009 - Dec 2013</h6>
-              <p>Matric</p>
-              <hr>
-            </div>
-            <br>
-            
-         
+
+          <div class="col-sm-8">
+            <h5>Full-Stack Developer</h5>
+            <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2021 - <span class="w3-tag w3-blue w3-round">Current</span></h6>
           </div>
-         
-    
         </div>
-        
-        
+      </div>
+
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-sm-4">
+            <h4>JAM Clothing</h4>
+          </div>
+
+          <div class="col-sm-8">
+            <h5>Stockroom Merchandiser</h5>
+            <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2016 - Jan 2018</h6>
+          <br>
+            <h5>Store Assistant</h5>
+            <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2014 - Apr 2016</h6>
+          </div>
+        </div>
+      </div>
+
+      
+      
     
       </div>
-      
-      
-    
     </div>
+ 
+    <hr>
     
-    
+  <br>
   
     
 </body>
