--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,3 +1,13 @@
 .navbar{
     background-color: black;
+    /* position: fixed; */
+    top: 0;
+    display: flex;
+    z-index: 9;
+    width: 100%;
+}
+
+h1{
+    font-size: xx-large;
+    font-family: Georgia;
 }
