--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark 
-">
-    <a class="navbar-brand" href="#"><h1>JD</h1></a>
+<nav class="navbar navbar-expand-lg navbar-dark ">
+  <a class="navbar-brand" href="#"><h1>JD</h1></a>
+  <div class="container-fluid">
+  </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
