--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -10,7 +10,7 @@
 
             
 
-            <a href=""> <div class="card mb-3" style="max-width: 540px;">
+            <a href="https://thumamina-8.herokuapp.com"> <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img src="../../assets/smart.jpeg" class="img-fluid rounded-start" alt="...">
