--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -82,7 +82,17 @@
           <div class="col-sm-8">
             <h5>National Diploma in Software Development</h5>
             <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2018 - <span class="w3-tag w3-blue w3-round">Current</span></h6>
-            <p></p>
+            <p>
+              - C++ Object Oriented Programming <br>
+              - System Analysis and Design <br>
+              - Oracle SQL and PL/SQL <br>
+              - Cisco Network+ <br>
+              - CompTia A+ <br>
+              - UML Diagrams <br>
+              - Project Management <br>
+              - Information Systems <br>
+              - Database Design, Implementation and Design
+            </p>
           </div>
         </div>
 
@@ -95,6 +105,11 @@
         <div class="col-sm-8">
           <h5>Introduction to Networking</h5> 
           <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2021 </h6>
+          <p>
+            - Troubleshoot connectivity in a small Network <br>
+            - Configure switches and end devices to provide access to local and remote network resources <br>
+            - Explain how physical and datalink layer protocols support the operation of Ethernet in switched network <br>
+          </p>
         </div>
       </div>
       <hr>
@@ -111,6 +126,14 @@
           <div class="col-sm-8">
             <h5>Full-Stack Developer</h5>
             <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2021 - <span class="w3-tag w3-blue w3-round">Current</span></h6>
+            <p>
+              - Designing wire-frames using Figma <br>
+              - Creating web applications with Angular 2+, HTML, CSS, TypeScript <br>
+              - Creating REST APIs using Express and NodeJS <br>
+              - Deploying applications <br>
+              - Using Git for version control and colleborating with teams <br>
+              - Using PostgreSQL and MongoDB for Database
+            </p>
           </div>
         </div>
       </div>
@@ -124,9 +147,23 @@
           <div class="col-sm-8">
             <h5>Stockroom Merchandiser</h5>
             <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2016 - Jan 2018</h6>
+            <p>
+              - Recieving stock and transfering stock to and from head office and other stores<br>
+              - Packing stork in the warehouse in an accessible way <br>
+              - Capturing stock in the system <br>
+              - Doing stock takes
+            </p>
           <br>
             <h5>Store Assistant</h5>
             <h6 class="w3-text-blue "><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2014 - Apr 2016</h6>
+            <p>
+              - Cashier <br>
+              - Packing stock <br>
+              - Perfroming customer service <br>
+              - Merchandising clothes on the floor <br>
+              - Cleaning the shop <br>
+              - Doing stock takes
+            </p>
           </div>
         </div>
       </div>
