--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,8 +1,8 @@
-<app-nav></app-nav>
+<!-- <app-nav></app-nav> -->
 
 <body>
-    
-    <div class="container">
+    <div class="con">
+    <div class="container" id="about">
       <h1>About me</h1>
       <div class="row">
         <div class="col-sm-3">
@@ -178,8 +178,8 @@
     
   <br>
   
-    
+</div>
 </body>
   
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
     
