--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 
-    <app-nav></app-nav>
+    <!-- <app-nav></app-nav> -->
     <body>
-      <div class="con1">
+      <div class="con1" id="home">
         <div class="container">
             <div class="row">
               <div class="col-sm-8  mt-5">
@@ -25,6 +25,6 @@
     </body>
 
 
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
 
 
