--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,8 +1,8 @@
-<app-nav></app-nav>
+<!-- <app-nav></app-nav> -->
 
 <body>
     
-    <div class="container">
+    <div class="container" id="projects">
         <div class="row">
           <div class="col-sm-7">
 
@@ -69,7 +69,7 @@
       </div>
 
     
-      <app-footer></app-footer>
+      <!-- <app-footer></app-footer> -->
 </body>
 
 
