--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<app-nav></app-nav>
+<div class="d-flex flex-column">
+    <app-home></app-home>
+    <app-about></app-about>
+    <app-projects></app-projects>
+    <app-contacts></app-contacts>
+    
+</div>
