--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,8 +1,8 @@
-<app-nav></app-nav>
+<!-- <app-nav></app-nav> -->
 
 <body>
     
-    <div class="container">
+    <div class="container" id="contacts">
         <div class="row">
           <div class="col-sm-4">
             <img src="../../assets/kisspng-computer-programming-software-developer-openvpn-eu-5d42a776e01df1.037503031564649334918.png" alt="">
